--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "yesterdays-note",
+	"name": "Yesterday's Daily Note",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Access the daily note from the previous day",
+	"author": "Amanda Chaudhary",
+	"authorUrl": "https://catsynth.com",
+	"fundingUrl": "https://ko-fi.com/catsynth",
 	"isDesktopOnly": false
 }
